--- a/notebook/nb001_eda.ipynb
+++ b/notebook/nb001_eda.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,14 @@
     "import pandas as pd\n",
     "from plotly import express as px\n",
     "from pathlib import Path\n",
+    "import pynmea2\n",
     "\n",
-    "DATA_PATH = \"../../input\""
+    "DATA_PATH = \"../../input/google-smartphone-decimeter-challenge\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "4  2020-05-15-US-MTV-1_Pixel4        1273608789432  37.904611 -86.481078"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4501,6 +4502,250 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## loading nmea data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<GGA(timestamp=datetime.time(22, 1, 34), lat='3725.4168121', lat_dir='N', lon='12205.6498009', lon_dir='W', gps_qual=1, num_sats='14', horizontal_dil='1.0', altitude=2.7, altitude_units='M', geo_sep='-32.64', geo_sep_units='M', age_gps_data='', ref_station_id='')>\n",
+      "---------------------------------\n",
+      "timestamp: 22:01:34\n",
+      "lat: 3725.4168121\n",
+      "lat_dir: N\n",
+      "lon: 12205.6498009\n",
+      "lon_dir: W\n",
+      "gps_qual: 1\n",
+      "num_sats: 14\n",
+      "horizontal_dil: 1.0\n",
+      "altitude: 2.7\n",
+      "altitude_units: M\n",
+      "geo_sep: -32.64\n",
+      "geo_sep_units: M\n",
+      "age_gps_data: \n",
+      "ref_station_id: \n",
+      "---------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(Path(DATA_PATH) / \"train/2020-05-14-US-MTV-1/Pixel4/supplemental/SPAN_Pixel4_10Hz.nmea\", encoding='utf-8') as nmea_f:\n",
+    "    for line in nmea_f.readlines():\n",
+    "        try:\n",
+    "            msg = pynmea2.parse(line)\n",
+    "            break\n",
+    "        except pynmea2.ParseError as e:\n",
+    "            pass\n",
+    "\n",
+    "print(repr(msg))\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"timestamp:\", msg.timestamp)\n",
+    "print(\"lat:\", msg.lat)\n",
+    "print(\"lat_dir:\", msg.lat_dir)\n",
+    "print(\"lon:\", msg.lon)\n",
+    "print(\"lon_dir:\", msg.lon_dir)\n",
+    "print(\"gps_qual:\", msg.gps_qual)\n",
+    "print(\"num_sats:\", msg.num_sats)\n",
+    "print(\"horizontal_dil:\", msg.horizontal_dil)\n",
+    "print(\"altitude:\", msg.altitude)\n",
+    "print(\"altitude_units:\", msg.altitude_units)\n",
+    "print(\"geo_sep:\", msg.geo_sep)\n",
+    "print(\"geo_sep_units:\", msg.geo_sep_units)\n",
+    "print(\"age_gps_data:\", msg.age_gps_data)\n",
+    "print(\"ref_station_id:\", msg.ref_station_id)\n",
+    "print(\"---------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_nmea_file(nmea_path):\n",
+    "    gga_lines = []\n",
+    "    with open(nmea_path, encoding=\"utf-8\") as nmea_f:\n",
+    "        for line in nmea_f.readlines():\n",
+    "            try:\n",
+    "                msg = pynmea2.parse(line)\n",
+    "                line = [\n",
+    "                    msg.timestamp,\n",
+    "                    msg.lat,\n",
+    "                    msg.lat_dir,\n",
+    "                    msg.lon,\n",
+    "                    msg.lon_dir,\n",
+    "                ]\n",
+    "                gga_lines.append(line)\n",
+    "            except pynmea2.ParseError as e:\n",
+    "                pass\n",
+    "            \n",
+    "    return pd.DataFrame(gga_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22:01:34</td>\n",
+       "      <td>3725.4168121</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12205.6498009</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22:01:34.100000</td>\n",
+       "      <td>3725.4168119</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12205.6498010</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22:01:34.200000</td>\n",
+       "      <td>3725.4168116</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12205.6498012</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22:01:34.300000</td>\n",
+       "      <td>3725.4168112</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12205.6498014</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22:01:34.400000</td>\n",
+       "      <td>3725.4168112</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12205.6498014</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23766</th>\n",
+       "      <td>22:41:10.600000</td>\n",
+       "      <td>3738.7442325</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12224.3380996</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23767</th>\n",
+       "      <td>22:41:10.700000</td>\n",
+       "      <td>3738.7442324</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12224.3380998</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23768</th>\n",
+       "      <td>22:41:10.800000</td>\n",
+       "      <td>3738.7442319</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12224.3381002</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23769</th>\n",
+       "      <td>22:41:10.900000</td>\n",
+       "      <td>3738.7442313</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12224.3381007</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23770</th>\n",
+       "      <td>22:41:11</td>\n",
+       "      <td>3738.7442310</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12224.3381010</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23771 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0             1  2              3  4\n",
+       "0             22:01:34  3725.4168121  N  12205.6498009  W\n",
+       "1      22:01:34.100000  3725.4168119  N  12205.6498010  W\n",
+       "2      22:01:34.200000  3725.4168116  N  12205.6498012  W\n",
+       "3      22:01:34.300000  3725.4168112  N  12205.6498014  W\n",
+       "4      22:01:34.400000  3725.4168112  N  12205.6498014  W\n",
+       "...                ...           ... ..            ... ..\n",
+       "23766  22:41:10.600000  3738.7442325  N  12224.3380996  W\n",
+       "23767  22:41:10.700000  3738.7442324  N  12224.3380998  W\n",
+       "23768  22:41:10.800000  3738.7442319  N  12224.3381002  W\n",
+       "23769  22:41:10.900000  3738.7442313  N  12224.3381007  W\n",
+       "23770         22:41:11  3738.7442310  N  12224.3381010  W\n",
+       "\n",
+       "[23771 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nmea_sample = load_nmea_file(Path(DATA_PATH) / \"train/2020-05-14-US-MTV-1/Pixel4/supplemental/SPAN_Pixel4_10Hz.nmea\")\n",
+    "nmea_sample"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -4510,15 +4755,23 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "fb73837b1a932fde25a1aeb4d7f2789b1495b9970a13586e85268ddb1607e0a5"
+   "hash": "3c1f77316cdd079bee43b05e03cfb877c49631f37214410f6b3c8418ecf7a9b0"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('3.8.8': pyenv)",
+   "display_name": "Python 3.8.8  ('.venv': venv)",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
   "metadata": {
    "interpreter": {
