--- a/notebook/nb002_interpolate_device.ipynb
+++ b/notebook/nb002_interpolate_device.ipynb
@@ -1726,7 +1726,7 @@
    "hash": "3c1f77316cdd079bee43b05e03cfb877c49631f37214410f6b3c8418ecf7a9b0"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8  ('.venv': venv)",
+   "display_name": "Python 3.8.8 64-bit ('.venv': poetry)",
    "name": "python3"
   },
   "language_info": {
