--- a/notebook/nb004_mean_prediction.ipynb
+++ b/notebook/nb004_mean_prediction.ipynb
@@ -54,6 +54,7 @@
     "    a = np.sin(dlat/2)**2 + \\\n",
     "        np.cos(lat1) * np.cos(lat2) * np.sin(dlon/2)**2\n",
     "    dist = 2 * RADIUS * np.arcsin(a**0.5)\n",
+    "    \n",
     "    return dist\n",
     "\n",
     "\n",
@@ -265,9 +266,7 @@
     "gts = []\n",
     "for gt_file in tqdm(gt_files):\n",
     "    gts.append(pd.read_csv(gt_file))\n",
-    "ground_truth = pd.concat(gts)\n",
-    "\n",
-    "display(ground_truth.head())"
+    "ground_truth = pd.concat(gts)"
    ]
   },
   {
@@ -22552,20 +22551,12 @@
    "hash": "3c1f77316cdd079bee43b05e03cfb877c49631f37214410f6b3c8418ecf7a9b0"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8  ('.venv': venv)",
+   "display_name": "Python 3.8.8 64-bit ('.venv': poetry)",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": ""
   },
   "orig_nbformat": 4
  },
